2006-07-23  Christian Kellner  <gicmo@gnome.org>

	* libgnomevfs/gnome-vfs-hal-mounts.c: 
	Replace __FUNCTION__ by G_GNUC_FUNCTION.

2006-07-16  Christian Neumair  <chris@gnome-de.org>

	* libgnomevfs/gnome-vfs-ops.c:
	* libgnomevfs/gnome-vfs-ops.h:
	Add GNOME_VFS_SET_FILE_INFO_SYMLINK_NAME.
	Update gnome_vfs_set_file_info(_uri) docs.

	* libgnomevfs/gnome-vfs-result.c:
	* libgnomevfs/gnome-vfs-result.h:
	Add GNOME_VFS_ERROR_NOT_A_SYMBOLIC_LINK.

	* libgnomevfs/gnome-vfs-async-ops.c:
	(gnome_vfs_async_set_file_info):
	Update docs.

	* modules/file-method.c: (do_set_file_info):
	Support setting a symlink's target.

	* modules/sftp-method.c: (do_set_file_info):
	Filter out masks we can't set, and return
	GNOME_VFS_ERROR_NOT_SUPPORTED on failure.

	Fixes #309949.

2006-07-16  Christian Neumair  <chris@gnome-de.org>

	* libgnomevfs/gnome-vfs-uri.c: (gnome_vfs_uri_resolve_relative),
	(gnome_vfs_uri_resolve_symbolic_link):
	* libgnomevfs/gnome-vfs-uri.h:
	Add gnome_vfs_uri_resolve_symbolic_link API.
	* libgnomevfs/gnome-vfs-utils.c: (gnome_vfs_resolve_symlink),
	(_gnome_vfs_uri_resolve_all_symlinks_uri):
	Use gnome_vfs_uri_resolve_symbolic_link for resolving symlinks,
	Assert that path and symlink are not NULL in
	gnome_vfs_resolve_symlink.
	* doc/gnome-vfs-2.0-sections.txt:
	Add gnome_vfs_uri_resolve_symbolic_link.
	Fixes #323016.

2006-07-16  Christian Kellner  <gicmo@gnome.org>

	* test/test-shell.c: (main): Get rid of C99ism (Declare variable
	at the beginning). This should fix the build with gcc 2.95.
	Patch from Jens Granseuer <jensgr@gmx.net>. Fixes #347603

2006-07-14  Christian Neumair  <chris@gnome-de.org>

	* libgnomevfs/gnome-vfs-filesystem-type.c:
	Add ffs, kernfs, lfs, ptyfs, tmpfs and encfs.
	Thanks to Julio M. Merino Vidal <jmmv@NetBSD.org>
	and <nahoo82@terra.es>.
	Fixes #336533 and #328883.
	* libgnomevfs/gnome-vfs-volume.c: Update API docs, i.e. list of
	recognized file systems.

2006-07-14  Christian Kellner  <gicmo@gnome.org>
